k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ea-league-backend-svc
  labels:
    app: ea-league
    tier: backend
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: ea-league
    tier: backend

---
apiVersion: v1
kind: Service
metadata:
  name: ea-league-frontend-svc
  labels:
    app: ea-league
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ea-league
    tier: frontend
